@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.jupiter.version>5.10.3</junit.jupiter.version>
         <javafx.version>21.0.5</javafx.version>
-        <fxthemes.version>1.6.0</fxthemes.version>
+        <jna.version>5.13.0</jna.version>
     </properties>
 
     <dependencies>
@@ -33,19 +33,9 @@
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.pixelduke</groupId>
-            <artifactId>fxthemes</artifactId>
-            <version>${fxthemes.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>javafx-controls</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>javafx-graphics</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
+            <version>${jna.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -59,6 +49,17 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.glass.ui=calculatorpp</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
             </plugin>
@@ -67,13 +68,11 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>calculatorpp/calculatorpp.CalculatorApp</mainClass>
+                    <mainClass>calculatorpp/com.calculator.Main</mainClass>
                     <options>
                         <option>-Dprism.forceUploadingPainter=true</option>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/javafx.stage=com.pixelduke.fxthemes</option>
                         <option>--add-exports</option>
-                        <option>javafx.graphics/com.sun.javafx.tk.quantum=com.pixelduke.fxthemes</option>
+                        <option>javafx.graphics/com.sun.glass.ui=calculatorpp</option>
                     </options>
                 </configuration>
             </plugin>
